--- a/src/components/hobbies.css
+++ b/src/components/hobbies.css
@@ -16,3 +16,11 @@
 .videoGames{
     margin-bottom: 100px;
 }
+
+@media screen and (max-width: 520px){
+    
+    .videoGames{
+        margin-bottom: 50px;
+    }
+
+}
