--- a/src/components/musicalTastes.css
+++ b/src/components/musicalTastes.css
@@ -4,3 +4,9 @@
     padding-top: 200px;
     padding-bottom: 50px;
 }
+
+@media screen and (max-width: 520px){
+    .musicalTastes{
+        padding-bottom: 0px;
+    }
+}
